css/responsive/index.css
@media (max-width: 1500px) {

    /* Section 1 */
    section:nth-of-type(1) .slide {
        flex-direction: column-reverse;
    }

    section:nth-of-type(1) .slide>img {
        width: 100%;
        height: auto;
    }

    section:nth-of-type(1) .slide>div {
        padding-right: 50px;
        height: fit-content;
    }

    /* Section 2 */
    section:nth-of-type(2)>div {
        overflow-x: scroll;
    }

    section:nth-of-type(2)>div div.game-card {
        margin-right: 50px;
    }

    section:nth-of-type(2)>div div.game-card>img {
        height: calc(450 * 0.10vw);
        width: calc(300 * 0.10vw);
    }

    /* Section 3 */
    section:nth-of-type(3)>div {
        flex-direction: column;
    }

    section:nth-of-type(3)>div>#main-news-card {
        margin-right: 0;
        margin-bottom: 20px;
    }

    section:nth-of-type(3)>div>#news>.news-card {
        width: 100%;
    }
}

@media (max-width: 800px) {
    /* Section 1 */
    section:nth-of-type(1) .slideshow-container {
        margin-top: calc(var(--main-side-padding) * 4);
    }

    section:nth-of-type(1) .dot {
        height: 10px;
        width: 10px;
    }

    section:nth-of-type(1) .active {
        width: 30px;
    }

    /* Section 3 */
    section:nth-of-type(3)>div>#news>.news-card {
        height: 25vw;
    }

    section:nth-of-type(3)>div>#news>.news-card>img {
        border-radius: 15px;
        object-fit: cover;
        height: 25vw;
        width: 25vw;
    }
}



@media (max-width: 600px) {

    /* Section 1 */
    section:nth-of-type(1) .slide>div {
        padding: 15px;
    }

    /* Section 3 */
    section:nth-of-type(3)>div>#news>.news-card {
        align-items: flex-start;
        height: fit-content;
    }
}

